--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot==20.3
-aiohttp
-requests
-flask
-gunicorn
+python-telegram-bot==20.7
+requests==2.32.3
+aiohttp==3.9.5
+python-nmap==0.7.1
+python-dotenv==1.0.1
